# Inanis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  build.rs  crates.js  help.html  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
.cargo/: config.toml
.github/workflows/: build.yml  docs.yml  release.yml
benches/: evaluation_benchmark.rs  fen_benchmark.rs  movegen_benches.rs  perft_benches.rs  perft_benchmark.rs  see_benchmark.rs
common/: Cargo.toml
inanis/: all.html  fn.init.html  index.html  sidebar-items.js  type.MoveScores.html  type.Moves.html
inanis/cache/: index.html  sidebar-items.js
inanis/engine/: constant.CHECKMATE_SCORE.html  constant.DEADLINE_MULTIPLIER.html  constant.DRAW_SCORE.html  constant.INVALID_SCORE.html  constant.MAX_DEPTH.html  constant.MAX_MOVES_COUNT.html  constant.MIN_ALPHA.html  constant.MIN_BETA.html  constant.TBMATE_SCORE.html  constant.TIME_THRESHOLD_RATIO.html  fn.is_score_near_checkmate.html  fn.sort_next_move.html  index.html  sidebar-items.js
inanis/evaluation/: constant.INITIAL_GAME_PHASE.html  constant.PIECE_PHASE_VALUES.html  constant.PIECE_VALUES.html  fn.init.html  fn.taper_score.html  index.html  macro.s.html  sidebar-items.js  static.INITIAL_MATERIAL.html  struct.EvaluationParameters.html  struct.EvaluationResult.html  struct.PackedEval.html
inanis/interface/: index.html  sidebar-items.js
inanis/perft/: fn.run_internal.html  index.html  sidebar-items.js
inanis/state/: constant.A1.html  constant.A1_BB.html  constant.A2.html  constant.A2_BB.html  constant.A3.html  constant.A3_BB.html  constant.A4.html  constant.A4_BB.html  constant.A5.html  constant.A5_BB.html  constant.A6.html  constant.A6_BB.html  constant.A7.html  constant.A7_BB.html  constant.A8.html  constant.A8_BB.html  constant.ALL_COLORS.html  constant.ALL_FILES.html  constant.ALL_PHASES.html  constant.ALL_PIECES.html  constant.ALL_POVS.html  constant.ALL_RANKS.html  constant.ALL_SQUARES.html  constant.B1.html  constant.B1_BB.html  constant.B2.html  constant.B2_BB.html  constant.B3.html  constant.B3_BB.html  constant.B4.html  constant.B4_BB.html  constant.B5.html  constant.B5_BB.html  (+166 more)
misc/: inanis.xcf  time.xlsx
src/: benchmark.rs  board.rs  clock.rs  common.rs  constants.rs  evaluation.rs  fen.rs  helpers.rs  lib.rs  main.rs  movegen.rs  movescan.rs  patterns.rs  perft.rs  qsearch.rs  search.rs  terminal.rs  uci.rs  zobrist.rs
tests/: board_tests.rs  fen_tests.rs  get_attacking_pieces_tests.rs  integrity_tests.rs  is_field_attacked_tests.rs  perft_tests.rs  see_tests.rs  tuner_tests.rs
(+1134 files in other folders)
