[package]
name = "inanis"
version = "1.2.0"
authors = ["Pawel Osikowski"]
repository = "https://github.com/Tearth/Inanis"
edition = "2021"

[lib]
doctest = false

[features]
syzygy = ["dep:cc"]
bindgen = ["dep:bindgen"]

[dependencies]
fastrand = { version = "1.8.0" }
time = { version = "0.3.14", features = ["formatting"]}
bitflags = { version = "1.3.2" }

[build-dependencies]
time = { version = "0.3.14", features = ["formatting"]}
cc = { version = "1.0.73", optional = true }
bindgen = { version = "0.60.1", optional = true }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }

[profile.release]
panic = "abort"
lto = true
strip = true
debug = false

[[bench]]
name = "evaluation_benchmark"
harness = false

[[bench]]
name = "fen_benchmark"
harness = false

[[bench]]
name = "perft_benchmark"
harness = false

[[bench]]
name = "see_benchmark"
harness = false