[package]
name = "inanis"
version = "1.2.0"
authors = ["Pawel Osikowski"]
repository = "https://github.com/Tearth/Inanis"
edition = "2021"

[lib]
doctest = false

[features]
syzygy = ["dep:cc"]
bindgen = ["dep:bindgen"]

[dependencies]
common = { path = "./common/" }

[build-dependencies]
common = { path = "./common/" }
cc = { version = "1.0.73", optional = true }
bindgen = { version = "0.60.1", optional = true }

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }

[profile.release]
panic = "abort"
lto = true
strip = true
codegen-units = 1

[[bench]]
name = "evaluation_benchmark"
harness = false

[[bench]]
name = "fen_benchmark"
harness = false

[[bench]]
name = "perft_benchmark"
harness = false

[[bench]]
name = "see_benchmark"
harness = false